<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="ora">Insert hour value</string>
    <string name="minute">Insert minute value</string>
    <string name="set">SET</string>
    <string name="reset">RESET</string>
    <string name="poll">POLL</string>
    <string name="server">SERVER</string>
    <string name="client">CLIENT</string>
    <string name="port">Insert port number</string>
    <string name="start_server">START</string>
</resources>